26/8/23:
-Basic C++ scripting engine, runtime compilation/connecting of external c++ scripts to entities (currently only msvc supported)
-UI integration with scripts
-UI improvements, error window

22/8/23:
-Concept of projects and project management added
-3D Mesh/material asset previews in editor
-Large UI changes in editor
-Asset management improved, serialized/clone asset files kept with project files
-Fixed some entity/transform hierarchy bugs
-Mesh asset binary serialization
-Some vol. fog changes/fixes


16/8/23:
-Some work on binary asset serialization
-Async mesh/texture loading
-Asset management stuff in its own singleton class, moved out of Scene
-ImGui drag and drop for materials/textures instead of scuffed system


12/8/23:
-Vertex data format changes - loose floats used instead of vectors
-Transform hierarchies fixed
-Improved editor cam controls
-Removed useless editor cam class

9/8/23:
-PhysX GPU support janky fix just copying pre-compiled dlls
-Fixed entity parent/child relationships
-UI improvements for hierarchies, scrolling bug on entities with many children fixed.


7/8/23:
-CMake build updated and fixed
-Some scene loading bugs fixed and stability improvements


5/8/23:
-Events system changes
-Multiple active scene support
-Optimizations to physics/transform events
-Portal shader for fun


30/7/23:
-Editor bugfixing
-Assets now compiled into the core engine lib instead of needing to be in every project using it


28/7/23:
-ECS Overhaul - started using entt and event-driven architecture
-Made core engine API a library and seperated editor application from it
-Events system converted to using entt
-Fixed spotlight/pointlight shadows
-PCSS for directional lights
-Bloom post processing added - http://www.iryoku.com/next-generation-post-processing-in-call-of-duty-advanced-warfare
-Emissive materials and texture support
-Stability improvements, a few crashes (especially on window close) fixed


14/7/23: